# rag-api-eval-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  logging.py  metrics.py  middleware.py  schemas.py
app/services/: embeddings.py  ingest.py  retrieval.py  storage.py
data/: eval.jsonl
data/sample_docs/: observability.md  operations.md  platform_overview.md  security_notes.txt
eval/: generate.py  run.py
scripts/: demo.sh  smoke_test.sh
tests/: test_api.py  test_ingest.py
