[project]
name = "rag-api-eval-starter"
version = "0.1.0"
description = "Production-style RAG API with evaluation starter"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Example", email = "dev@example.com" }]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "qdrant-client>=1.9.0",
  "sentence-transformers>=2.5.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "pypdf>=4.1.0",
  "numpy>=1.26.0",
  "python-json-logger>=2.0.7",
  "psycopg[binary]>=3.1.18",
  "pgvector>=0.2.5",
]

[project.optional-dependencies]
eval = [
  "ragas>=0.1.10",
  "langchain-openai>=0.1.8",
  "openai>=1.16.0",
  "pandas>=2.2.0",
  "datasets>=2.19.0",
]
dev = [
  "pytest>=8.1.0",
  "httpx>=0.27.0",
  "mypy>=1.9.0",
  "ruff>=0.3.4",
  "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
